// Vitest Snapshot v1

exports[`RangeInput > RangeInput baseVue demo works fine 1`] = `<t-range-input />`;

exports[`RangeInput > RangeInput popupVue demo works fine 1`] = `
<t-range-input-popup
  panel="() => h(\\"div\\", [\\"hello world\\"])"
/>
`;

exports[`RangeInput > RangeInput sizeVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
>
  <t-range-input
    size="small"
  />
  <t-range-input />
  <t-range-input
    size="large"
  />
</div>
`;

exports[`RangeInput > RangeInput statusVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
>
  <t-range-input
    status="success"
  />
  <t-range-input
    status="warning"
  />
  <t-range-input
    status="error"
  />
</div>
`;
